[global]
verbose = 0

[metadata]
name = rave
version = 0.0.1
author = rave developers and contributors
description = A modular and extensible visual novel engine.
keywords = visual novel engine, visual novel, 2d engine, graphics engine
maintainer = Shiz
maintainer-email = hi@shiz.me

classifiers = Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Games/Entertainment
    Topic :: Multimedia
    Topic :: Software Development :: Libraries

[nosetests]
traverse-namespace = 1
with-coverage = 1
with-id = 1
with-progressive = 1
cover-erase = 1
cover-tests = 1
cover-inclusive = 1
cover-package = rave
