[global]
verbose = 0

[metadata]
name = rave
version = 0.1.0
author = rave developers and contributors
description = A modular and extensible visual novel engine.
keywords = visual novel engine, visual novel, 2d engine, graphics engine
url = https://github.com/rave-engine
license = 2-clause BSD
maintainer = Shiz
maintainer-email = hi@shiz.me

classifiers = Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Games/Entertainment
    Topic :: Multimedia
    Topic :: Software Development :: Libraries

[pytest]
addopts = -qs --cov rave --cov modules --cov-config .coveragerc --cov-report term-missing
